--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,21 +4,26 @@
 
 @font-face {
   font-family: 'Formula';
-  src: url('/fonts/Formula-M.ttf') format('truetype');
-  font-weight: 500;
+  src: url('/fonts/FormularMono-Bold.woff2') format('woff2');
+  font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Neue';
-  src: url('/fonts/Neue-R.ttf') format('truetype');
-  font-weight: normal;
+  src: url('/fonts/NeueHaasDisplay-Roman.woff2') format('woff2');
+  font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --foreground-rgb: 0, 0, 0;
+  --background-start-rgb: 214, 219, 220;
+  --background-end-rgb: 255, 255, 255;
 }
 
 @theme inline {
@@ -32,6 +37,9 @@
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
+    --foreground-rgb: 255, 255, 255;
+    --background-start-rgb: 0, 0, 0;
+    --background-end-rgb: 0, 0, 0;
   }
 }
 
@@ -170,4 +178,20 @@ html, body, #__next {
   70% {
     transform: translateY(calc(2px * var(--move))) translateZ(0) rotate(calc(3deg * var(--rotate) * var(--part)));
   }
+}
+
+@keyframes float {
+  0% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(-15px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+.animate-float {
+  animation: float 6s ease-in-out infinite;
 }
